LPS-51062 use Number.valueOf() instead of constructor for better performances